--- a/.github/workflows/chart_push.yml
+++ b/.github/workflows/chart_push.yml
@@ -6,6 +6,10 @@ jobs:
     steps:
     - uses: 'actions/checkout@v3'
     - uses: azure/setup-helm@v3
+    - name: 'Test secrets'
+      run: echo $TEST_SECRET
+      env:
+        TEST_SECRET: ${{ secrets.TEST_SECRET }}
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v1'
