--- a/.github/workflows/chart_push.yml
+++ b/.github/workflows/chart_push.yml
@@ -6,15 +6,11 @@ jobs:
     steps:
     - uses: 'actions/checkout@v3'
     - uses: azure/setup-helm@v3
-    - name: 'Test secrets'
-      run: echo $TEST_SECRET
-      env:
-        TEST_SECRET: ${{ secrets.TEST_SECRET }}
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v1'
       with:
-        credentials_json: '${{ secrets.GAR_HELM_TOKEN }}'
+        credentials_json: '${{ secrets.GAR_TOKEN_TEST }}'
     # Install gcloud, `setup-gcloud` automatically picks up authentication from `auth`.
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
