--- a/basic-web-service/templates/external-secrets.yaml
+++ b/basic-web-service/templates/external-secrets.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.vaultSecrets.enabled }}
 {{- $tenant := .Values.vaultSecrets.tenant }}
 {{- range .Values.vaultSecrets.secrets }}
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: {{ .name }}
